# Hush

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  clippy.toml  hush-prd.md  learnings.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vitest.config.ts  wdio.conf.ts
.audit/: positioning.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: tauri-audio-builder.agent.md
.github/workflows/: ci.yml  release.yml
docs/: developing.md  dmg-readme.txt  getting-started.md  macos-permissions.md  meeting-background-finalization-plan.md  meeting-background-finalization-proposal.md  memory-debugging.md  releases.md  system-audio-meeting-mode-proposal.md  vad-hallucination-gate-plan.md  vad-hallucination-gate-proposal.md
resources/: macos-audio-tap-probe.swift  macos-audio-tap.swift
scripts/: build-silero-vad-onnx.py  dev-cleanup.sh  dev-reset.sh  generate-dmg-background.sh  inject-dmg-readme.sh  make-ui-reference.py  memwatch.sh  tauri-bundle-macos.sh  tauri-dmg-macos.sh  test-audio-tap-permission.sh
src/: app.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: README.md  silero_vad.onnx
src-tauri/capabilities/: debug.json  default.json  hud.json  menu-bar.json  settings.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_meeting_sessions.sql  0003_meeting_app_overrides.sql  0004_meeting_sessions_sources.sql  0005_meeting_sessions_app_title.sql  0006_app_override_audio_profile.sql  0007_history_ignored.sql  0008_session_names.sql  0009_speaker_identities.sql
src-tauri/resources/: hush-audio-tap-probe
src-tauri/src/: alloc_tuning.rs  audio_cues.rs  events.rs  lib.rs  main.rs  repository.rs
src-tauri/src/app_menu/: mod.rs
src-tauri/src/audio/: core_audio_tap.rs  cpal.rs  file_source.rs  format.rs  mod.rs  screencapturekit.rs  tests.rs
src-tauri/src/db/: mod.rs
src-tauri/src/debug_log/: mod.rs
src-tauri/src/diarization/: catalog.rs  cluster.rs  features.rs  mod.rs  onnx.rs
src-tauri/src/dictionary/: mod.rs  packs.rs  sqlite.rs
src-tauri/src/dictionary/replacements/: mod.rs  sqlite.rs
src-tauri/src/dictionary/vocabulary/: mod.rs  sqlite.rs
src-tauri/src/history/: mod.rs  sqlite.rs
src-tauri/src/hotkey/: mod.rs  ptt.rs
src-tauri/src/hud/: mod.rs
src-tauri/src/ipc/: builder.rs  commands.rs  events.rs  mod.rs  pipeline.rs  state.rs  tests.rs
src-tauri/src/ipc/commands/: debug.rs  diarizer.rs  dictation.rs  dictionary.rs  export.rs  history.rs  macos.rs  meeting.rs  mod.rs  models.rs  permissions.rs  ptt.rs  settings.rs  speakers.rs  system.rs  updater.rs
src-tauri/src/ipc/commands/dictation/: mod.rs  pipeline.rs  tests.rs
src-tauri/src/macos_perms/: mod.rs
src-tauri/src/meeting/: app_overrides.rs  audio_buffer.rs  autostart.rs  autostart_poller.rs  classifier.rs  events.rs  export.rs  lifecycle.rs  manager.rs  mic_camera_monitor.rs  mod.rs  pump.rs  recovery.rs  sqlite.rs  test_support.rs
src-tauri/src/permissions/: macos.rs  mod.rs
src-tauri/src/settings/: codec.rs  mod.rs  sqlite.rs
src-tauri/src/settings_window/: mod.rs
src-tauri/src/speakers/: mod.rs  sqlite.rs
src-tauri/src/transcription/: catalog.rs  download.rs  mod.rs  resample.rs  streaming.rs  whisper.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/vad/: mod.rs  onnx.rs
src-tauri/tests/: audio_fixture.rs  diarization_fixture.rs  meeting_fixture.rs  streaming_fixture.rs
src-tauri/tests/fixtures/: README.md
src/lib/: AboutTab.svelte  AdvancedSection.svelte  AppLifecycle.svelte  AppSidebar.svelte  AudioPipelineDiagram.svelte  AudioSourcePicker.svelte  AudioWaveform.svelte  CommandPalette.svelte  ControlsSection.svelte  DebugConsole.svelte  DebugTab.svelte  DiarizerModelSection.svelte  DictationSection.svelte  DictationStatsBar.svelte  ErrorDisplay.svelte  ExportOptionsDialog.svelte  FirstRunModal.svelte  GeneralInterfaceSection.svelte  GeneralPerformanceSection.svelte  GeneralStartupSection.svelte  GeneralTab.svelte  HistoryActionRow.svelte  HistoryDictationRow.svelte  HistoryMeetingRow.svelte  HistoryPanel.svelte  MacosDiagnosticPanel.svelte  MacosPermsPill.svelte  MeetingAppOverridesPanel.svelte  MeetingAutostartSection.svelte  MeetingLiveTranscriptSection.svelte  MeetingSection.svelte  MeetingSessionsPanel.svelte  MeetingTab.svelte  ModelChip.svelte  ModelPickerPanel.svelte  PermissionHealthSection.svelte  PermissionsDialog.svelte  PermissionsRows.svelte  PermissionsTab.svelte  PttHotkeyEditor.svelte  (+26 more)
src/lib/state/: audio.svelte.ts  diarizer.svelte.ts  dictation.svelte.ts  general-runtime.svelte.ts  general-settings.svelte.ts  history.svelte.ts  meeting-sessions.svelte.ts  meeting-sessions.test.ts  meeting-settings.svelte.ts  models.svelte.ts  nav.svelte.ts  onboarding.svelte.ts  palette.svelte.ts  permissions.svelte.ts  permissions.test.ts  ptt.svelte.ts  replacements.svelte.ts  vocabulary.svelte.ts
src/lib/utils/: format.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/debug/: +page.svelte
src/routes/hud/: +page.svelte
src/routes/menu-bar/: +page.svelte
src/routes/settings/: +page.svelte
tests/e2e/: README.md  _mock.ts  app-profile-notice.spec.ts  audio-source-picker.spec.ts  audio-waveform.spec.ts  command-palette.spec.ts  destructive-confirms.spec.ts  diarizer-section.spec.ts  error-states.spec.ts  export-options-dialog.spec.ts  first-run.spec.ts  history-clear.spec.ts  hud-timer.spec.ts  meeting-panel.spec.ts  menu-bar.spec.ts  recording-phase.spec.ts  row-export.spec.ts  settings-diarization.spec.ts  settings-window.spec.ts  sidebar-navigation.spec.ts  status-line.spec.ts  theme-toggle.spec.ts  zz-screenshots.spec.ts  zz-uxwalk.spec.ts
tests/e2e-tauri/: README.md  tsconfig.json
tests/manual/: smoke-test-checklist.md
(+7 files in other folders)
