[package]
name = "hush"
version = "0.1.0"
description = "Hush — offline voice-to-text. Local Whisper transcription, no cloud round-trip."
authors = []
edition = "2021"

[lib]
# The `_lib` suffix avoids a name collision with the bin on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "hush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri plugins
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio capture (cross-platform)
cpal = "0.15"
# Realtime-safe SPSC ring buffer for the cpal callback → worker
# thread handoff (#55). The producer side is wait-free, doesn't
# allocate, and doesn't lock — three properties the cpal callback
# needs to honour the realtime-audio discipline. Replaces a
# Mutex<Vec<f32>> that worked in practice but violated the
# discipline; #55 has the full reasoning.
rtrb = "0.3"

# HTTP client for the model auto-download path. `rustls-tls` keeps the
# build cross-platform without depending on system OpenSSL — the same
# binary builds on macOS, Linux, and Windows. `stream` enables the
# byte-stream API used for chunk-by-chunk progress events without
# buffering the whole response.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# SHA-256 verification for downloaded model files. Hand-rolled hashing
# would be a security footgun; `sha2` is the well-vetted RustCrypto
# implementation.
sha2 = "0.11"

# Semantic-version comparison for the manual "Check for updates"
# probe (#223). Compares the bundled `CARGO_PKG_VERSION` to the
# tag returned by GitHub's releases API.
semver = "1"

# `Stream` trait + adaptors used to consume reqwest's response body.
# Tiny, no transitive deps beyond `futures-core`.
futures-util = "0.3"

# Local Whisper transcription — requires cmake and a C++ toolchain.
# Disabled by default so the project scaffolds without those system deps.
# Enable with: cargo build --features whisper
# In production builds the CI installs cmake explicitly.
whisper-rs = { version = "0.14", features = [], optional = true }

# SQLite persistence
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

# Async-trait shim for `async fn` in object-safe traits. Native async-fn-
# in-trait works since Rust 1.75 but is awkward to use behind `dyn` —
# `async-trait` keeps the existing `Arc<dyn HistoryRepository>` test seam
# pattern intact.
async-trait = "0.1"

# Foreground app detection
active-win-pos-rs = "0.10"

# Push-to-talk key events (key-down / key-up). We pin to fufesou's
# rdev fork because Narsil's upstream is incomplete on macOS 26+:
#
# Narsil/rdev#147 (May 2025) added a `set_is_main_thread` opt-in for
# the *send* path's TSM call, but `listen()` itself still attaches
# the CGEventTap to the *calling* thread's run loop. When that
# thread isn't main, the callback fires on a non-main thread, the
# `convert()` helper invokes TSM (`TISCopyCurrentKeyboardLayoutInputSource`
# + friends), macOS 26's `dispatch_assert_queue_fail` kills the
# process. We confirmed this hands-on: `cargo update` to Narsil's
# `main` HEAD, launch with `HUSH_PTT_ENABLE=1`, instant crash on
# the first modifier event.
#
# fufesou/rdev (the fork RustDesk ships in production) attaches the
# tap to `CFRunLoopGetMain()` instead, so the callback runs on main
# and TSM is happy. The API we use (`listen`, `Event`,
# `EventType::{KeyPress, KeyRelease}`, `Key`) is identical between
# the two forks.
#
# Bump-to-published when EITHER:
#   - Narsil ships a release that completes the listen-path fix, OR
#   - fufesou publishes their fork to crates.io.
# See learnings.md 2026-04-27 entry for full context. Refs #69, #70.
rdev = { git = "https://github.com/fufesou/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe" }

[features]
# `whisper` is a default feature so a vanilla `cargo run` / `npm run
# tauri dev` builds the actual transcription path. UI-only
# contributors (no cmake on the machine) can opt out with
# `--no-default-features` — `cargo tauri dev --no-default-features`
# launches the app shell without the Whisper backend; transcription
# returns `IpcError::TranscriptionUnavailable` and the frontend
# surfaces the no-model banner. Pre-2026-04-26 the default was empty
# and developers had to remember to pass `--features whisper`; the
# user hit this in hands-on testing because the model was on disk
# but the binary literally didn't include the loader code.
default = ["whisper"]
# Enable the whisper transcription backend (requires cmake).
whisper = ["dep:whisper-rs"]

[dev-dependencies]
tempfile = "3"
# Local HTTP mock server for the auto-download test suite. The download
# orchestrator is tested against deterministic fixtures (success,
# SHA-mismatch, cancel) rather than ever round-tripping to Hugging Face
# in CI.
wiremock = "0.6"
# WAV reader for the audio test fixture (#34). Only used in the
# `tests/audio_fixture.rs` integration test that loads a contributor-
# supplied WAV and runs it end-to-end through the transcription
# pipeline. Hand-rolling a PCM-WAV parser would be 30 lines but
# `hound` handles every variant whisper-rs's contributors might
# throw at us (24-bit, IEEE-float, etc.) and is mature enough that
# the dep cost is justified for a dev-only test.
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
# ScreenCaptureKit is the only sanctioned non-entitled path for
# system-audio capture on consumer macOS — see #105 and §13.8 of the
# PRD. Hush targets macOS 26+ only (memory: macos_support_window),
# so we link unconditionally on macOS rather than gating behind a
# feature flag. Pre-2026-04-27 the dep was opt-in via a
# `screencapturekit` feature; that meant a default `npm run tauri
# dev` shipped without SCK and the meeting panel's "Also record
# system audio" checkbox stayed disabled, which the user (Ken) hit
# in hands-on testing.
screencapturekit = "1.5.4"
# Direct dep of the same objc2 already pulled in transitively by
# screencapturekit, used by `macos_perms` to call
# `+[AVCaptureDevice authorizationStatusForMediaType:]` for the
# Microphone TCC status read. CoreGraphics (Screen Recording) and
# IOKit (Input Monitoring) are reached via plain `extern "C"` and
# don't need a binding crate.
objc2 = "0.6"

