[package]
name = "hush"
version = "0.5.0"
description = "Hush — offline voice-to-text. Local Whisper transcription, no cloud round-trip."
authors = []
edition = "2021"

[lib]
# The `_lib` suffix avoids a name collision with the bin on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "hush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri plugins
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
# Open external URLs in the OS browser (#322). In a Tauri 2 WebView
# `<a target="_blank">` does not open a new tab — outbound
# navigation is intercepted and dropped silently unless the shell
# plugin is registered. Frontend uses `@tauri-apps/plugin-shell`'s
# `open()` from a click handler; the Rust crate below is what
# makes that JS call functional.
tauri-plugin-shell = "2"
# Platform detection for the frontend (#272). Replaces the deprecated
# `navigator.platform` reads in `+page.svelte` / `settings/+page.svelte`
# with the plugin's `platform()` call. The Rust crate registration
# below is what makes the JS `@tauri-apps/plugin-os` package
# functional — without it the plugin commands return permission
# errors at runtime.
tauri-plugin-os = "2"
# Single-instance lock (#326). Without this plugin a second
# launch (Spotlight while a tray-hidden instance is up,
# `npm run tauri dev` while a bundled build is running, etc.)
# would open a fresh process that opens its own SQLite pool on
# the shared `hush.db` (sqlx's runtime lock is in-process only,
# not cross-process — concurrent FTS5 writes can corrupt the
# index), spawns its own rdev `listen()` thread (two CGEventTaps
# racing for PTT events), registers its own toggle hotkey (one
# fails non-deterministically), and emits its own `audio:level`
# pump. Registered first in the builder chain so the second
# instance bails out before any of the side-effect-bearing
# plugins (autostart, global-shortcut, etc.) initialise.
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Alternative allocator that aggressively returns freed pages to the OS via
# madvise, replacing macOS libmalloc's hold-forever freelist behaviour (#636).
# `override` compiles mimalloc with MI_MALLOC_OVERRIDE + MI_OSX_ZONE so it
# replaces the default malloc zone at startup — intercepting malloc/free from
# C/C++ code (whisper.cpp, ORT) in addition to Rust allocations. Without
# override, whisper.cpp/ORT pages are freed back to libmalloc which never
# madvises; Physical Footprint stays pinned even after Drop fires. See
# learnings.md 2026-05-07 for measurement context.
mimalloc = { version = "0.1", features = ["override"] }
# Daily-rolling file appender for the on-disk log layer (#622 follow-up).
# Persists tracing output to `~/Library/Logs/io.github.khawkins98.hush/`
# on macOS so post-hoc grepping is possible. The in-app Debug Console
# (`debug_log` module) keeps its in-memory ring buffer too; this is
# additive, not a replacement.
tracing-appender = "0.2"

# Audio capture (cross-platform)
cpal = "0.15"
# Realtime-safe SPSC ring buffer for the cpal callback → worker
# thread handoff (#55). The producer side is wait-free, doesn't
# allocate, and doesn't lock — three properties the cpal callback
# needs to honour the realtime-audio discipline. Replaces a
# Mutex<Vec<f32>> that worked in practice but violated the
# discipline; #55 has the full reasoning.
rtrb = "0.3"
# Audio playback for the start/done cue files (#446). `default-
# features = false` drops the MP3 / OGG / FLAC decoders we don't
# use; the cue files are short PCM WAVs synthesised at build time
# (see `build.rs::synth_cue_files`). Routes through CPAL on every
# platform, which gives free system-volume + Do-Not-Disturb
# behaviour without per-platform shims. Replaces the macOS-only
# `NSSound soundNamed:` path that depended on Apple's bundled
# system sounds.
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# HTTP client for the model auto-download path. `rustls-tls` keeps the
# build cross-platform without depending on system OpenSSL — the same
# binary builds on macOS, Linux, and Windows. `stream` enables the
# byte-stream API used for chunk-by-chunk progress events without
# buffering the whole response.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# SHA-256 verification for downloaded model files. Hand-rolled hashing
# would be a security footgun; `sha2` is the well-vetted RustCrypto
# implementation. Pinned to 0.10 (current stable line) rather than
# tracking the 0.11 pre-release — pre-releases can have unstable APIs
# and we don't need any 0.11-only features. See #256.
sha2 = "0.10"

# Semantic-version comparison for the manual "Check for updates"
# probe (#223). Compares the bundled `CARGO_PKG_VERSION` to the
# tag returned by GitHub's releases API.
semver = "1"

# Volatile-write zeroing of in-memory PCM windows + transcript
# fragments at session end (#250). Manual `iter_mut`/`= 0.0`
# loops are legally elidable by LLVM in `Drop` impls on release
# builds — `zeroize` uses a volatile write + compiler fence that
# the optimizer cannot remove, which is what actually delivers
# the privacy property the audio-pipeline doc-comments claim.
zeroize = "1"

# `Stream` trait + adaptors used to consume reqwest's response body.
# Tiny, no transitive deps beyond `futures-core`.
futures-util = "0.3"

# Local Whisper transcription — requires cmake and a C++ toolchain.
# Disabled by default so the project scaffolds without those system deps.
# Enable with: cargo build --features whisper
# In production builds the CI installs cmake explicitly.
whisper-rs = { version = "0.14", features = [], optional = true }

# Pure-Rust ONNX inference for the D2 speaker-embedding diarizer (#111).
# Replaced ORT (`ort` + `ndarray`) after ORT's `download-binaries`
# prebuilts for Apple Silicon were found to dispatch matmul /
# layernorm / softmax through Metal Performance Shaders even with the
# CPU execution provider, causing ~1.25 GB/min IOAccelerator growth
# during meetings that periodic session recreation could not address
# (#641, #642). `tract-onnx` is pure Rust — zero Metal dispatch —
# and the wespeaker ResNet34-LM model uses only standard ops (Conv,
# Gemm, Add, Relu, ReduceMean, Flatten, …) that tract supports
# natively. Binary grows ~5 MB vs ORT's ~50 MB vendored runtime.
tract-onnx = { version = "0.22.1", optional = true }

# Real-input FFT for the D2 diarizer's Mel-Filterbank feature
# extraction (#111). The wespeaker speaker-embedding model takes
# 80-dim Mel-FB features as input — `diarization::features`
# computes them in pure Rust using `realfft` for the underlying
# FFT step. `realfft` wraps `rustfft` to halve the work for
# real-valued input (audio is real); both are mature crates with
# wide downstream use. Optional + pulled in by `diarization-onnx`
# because `diarization::features` is the sole consumer.
realfft = { version = "3.5", optional = true }

# SQLite persistence
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

# RFC-4180 CSV writer for the History export pipeline (#357 phase 3).
# Hand-rolling escape rules around quotes / newlines / embedded
# delimiters is the kind of thing that breaks subtly under real
# transcripts (curly quotes, em-dashes, multi-line dictations).
# `csv` is the de-facto Rust crate for the format and is stable on
# 1.x; trade-off is one more dep, but the alternative is a
# never-ending edge-case sweep.
csv = "1"

# WAV reader for `WavFileAudioCapture` in `src/audio/file_source.rs`.
# Optional: pulled in only when the `test-utils` feature is enabled, so
# production binaries don't carry the hound dep. `hound` is also a
# dev-dependency (for audio_fixture.rs / streaming_fixture.rs) — the two
# entries are independent; this one gates in-tree source code, the other
# gates test files.
hound = { version = "3.5", optional = true }

# Async-trait shim for `async fn` in object-safe traits. Native async-fn-
# in-trait works since Rust 1.75 but is awkward to use behind `dyn` —
# `async-trait` keeps the existing `Arc<dyn HistoryRepository>` test seam
# pattern intact.
async-trait = "0.1"

# Foreground app detection
active-win-pos-rs = "0.10"

# Push-to-talk key events (key-down / key-up). We pin to fufesou's
# rdev fork because Narsil's upstream is incomplete on macOS 26+:
#
# Narsil/rdev#147 (May 2025) added a `set_is_main_thread` opt-in for
# the *send* path's TSM call, but `listen()` itself still attaches
# the CGEventTap to the *calling* thread's run loop. When that
# thread isn't main, the callback fires on a non-main thread, the
# `convert()` helper invokes TSM (`TISCopyCurrentKeyboardLayoutInputSource`
# + friends), macOS 26's `dispatch_assert_queue_fail` kills the
# process. We confirmed this hands-on: `cargo update` to Narsil's
# `main` HEAD, launch with `HUSH_PTT_ENABLE=1`, instant crash on
# the first modifier event.
#
# fufesou/rdev (the fork RustDesk ships in production) attaches the
# tap to `CFRunLoopGetMain()` instead, so the callback runs on main
# and TSM is happy. The API we use (`listen`, `Event`,
# `EventType::{KeyPress, KeyRelease}`, `Key`) is identical between
# the two forks.
#
# Bump-to-published when EITHER:
#   - Narsil ships a release that completes the listen-path fix, OR
#   - fufesou publishes their fork to crates.io.
#
# Supply-chain audit notes (refs #256 part 2):
# - Pinned to a specific commit SHA, not a branch. Cargo.lock
#   captures the resolved tree below this commit so
#   `cargo audit --deny warnings` can flag known-vulnerable
#   transitives.
# - The fork is what RustDesk ships in production (millions of
#   end-user installs); it is not a one-person fork with no
#   independent review. Their security posture covers ours.
# - To verify the pinned rev hasn't drifted upstream:
#     git fetch https://github.com/fufesou/rdev a90dbe1172f8832f54c97c62e823c5a34af5fdfe
#   If the fetch fails the rev was rewritten — investigate before
#   bumping. Document any audit findings in `learnings.md`.
# See learnings.md 2026-04-27 entry for full context. Refs #69, #70.
rdev = { git = "https://github.com/fufesou/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe" }

[features]
# `whisper` is a default feature so a vanilla `cargo run` / `npm run
# tauri dev` builds the actual transcription path. UI-only
# contributors (no cmake on the machine) can opt out with
# `--no-default-features` — `cargo tauri dev --no-default-features`
# launches the app shell without the Whisper backend; transcription
# returns `IpcError::TranscriptionUnavailable` and the frontend
# surfaces the no-model banner. Pre-2026-04-26 the default was empty
# and developers had to remember to pass `--features whisper`; the
# user hit this in hands-on testing because the model was on disk
# but the binary literally didn't include the loader code.
default = ["whisper", "diarization-onnx"]
# Enable the whisper transcription backend (requires cmake).
whisper = ["dep:whisper-rs"]

# D2 speaker-embedding diarization (#111). Pulls in `tract-onnx`.
# Default-on so binaries ship with the diarizer available; runtime
# activation is gated on the `diarization_enabled` settings flag
# (Settings → Meeting → Speakers, added in #295) AND a downloaded
# model file. UI-only contributors can opt out with
# `--no-default-features` for a faster build.
diarization-onnx = ["dep:tract-onnx", "dep:realfft"]

# Exposes deterministic test helpers: [`audio::file_source::WavFileAudioCapture`]
# (WAV-backed AudioCapture/AudioSession for meeting-pump integration tests)
# and enables the `hound` WAV-parsing dependency. Not included in default builds;
# enable with `--features test-utils` when running fixture integration tests.
# Gated off default to avoid a hound build-dep in production binaries.
test-utils = ["dep:hound"]

[dev-dependencies]
tempfile = "3"
# Local HTTP mock server for the auto-download test suite.
wiremock = "0.6"
# WAV reader used by existing audio_fixture / streaming_fixture integration
# tests. Still here for those tests; the `test-utils` feature pulls in the
# optional dep below for `WavFileAudioCapture` in `src/audio/file_source.rs`.
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
# ScreenCaptureKit is the only sanctioned non-entitled path for
# system-audio capture on consumer macOS — see #105 and §13.8 of the
# PRD. Hush targets macOS 26+ only (memory: macos_support_window),
# so we link unconditionally on macOS rather than gating behind a
# feature flag. Pre-2026-04-27 the dep was opt-in via a
# `screencapturekit` feature; that meant a default `npm run tauri
# dev` shipped without SCK and the meeting panel's "Also record
# system audio" checkbox stayed disabled, which the user (Ken) hit
# in hands-on testing.
screencapturekit = "1.5.4"
# Direct dep of the same objc2 already pulled in transitively by
# screencapturekit, used by `macos_perms` to call
# `+[AVCaptureDevice authorizationStatusForMediaType:]` for the
# Microphone TCC status read. CoreGraphics (Screen Recording) and
# IOKit (Input Monitoring) are reached via plain `extern "C"` and
# don't need a binding crate.
objc2 = "0.6"
# `NSString` constructor for the audio_cues `NSSound soundNamed:`
# call (#292). Same family as `objc2` above; trivial dep weight.
objc2-foundation = "0.3"
# Used by `audio::core_audio_tap` to send SIGTERM to the tap binary
# child process for clean shutdown.
libc = "0.2"

